--- a/css/extraStyle.css
+++ b/css/extraStyle.css
@@ -1,6 +1,21 @@
 body {
-  padding-bottom: 200px;
+  margin: 0;
+  padding: 0;
+  background-position: top center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  min-height: 100vh;
+  min-width: 100vw;
+  overflow-x: hidden;
+  padding-bottom: 40px;
 }
+
+.container.mask {
+  background-color: rgba(255, 255, 255, 0.8);
+  padding-bottom: 40px;
+}
+
 .nav > li:hover{
   -webkit-transition-property: background-color; /* Safari */
   -webkit-transition-duration: 0.15s; /* Safari */
@@ -18,6 +33,7 @@ body {
 .nav > li:hover{
   background-color: rgb(38, 224, 220);
 }
+
 .video-annotations {
   display:none;
 }
